--- a/src/front-end/home-page/styles/index/index.css
+++ b/src/front-end/home-page/styles/index/index.css
@@ -9,7 +9,7 @@
 :root {
   --font-regular: poppins-regular;
   --font-medium: poppins-medium;
-  --primary-color: red;
+  --primary-color: white;
   --regular-green: rgb(93, 212, 104);
   --light-gray: rgb(236, 236, 236);
   --regular-gray: rgb(59, 59, 59);
