--- a/src/front-end/home-page/styles/main/main.scss
+++ b/src/front-end/home-page/styles/main/main.scss
@@ -1,38 +1,98 @@
+@import "../global/global";
+
 main {
      padding: 140px 0px;
 	background-color: var(--light-gray);
 }
 
-div.propagandas-container {
-		position: relative;
+//start-loading-screen
+div.loading-screen-container {
+	&.--off {
+		filter: opacity(0%);
+		pointer-events: none;
+	}
 
-		& > div:first-of-type {
-			display: flex;
-			overflow: scroll;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	z-index: 4;
+	width: 100%;
+	height: 100vh;
+	background-color: var(--primary-color);
+	transition: ease-in-out 0.56s;
+	position: fixed;
+	top: 0px;
+	left: 0px;
 
-			img {
-				width: 100vw;
-                    object-fit: cover;
-			}
+
+	& > img {
+		&.--on {
+			filter: opacity(100%);
 		}
 
-		p {
-			border-radius: 4.9px;
-			color: var(--dark-gray);
-			background-color: var(--light-gray);
-			padding: 6.3px 10.5px;
-			font-size: 12.6px;
-			transform: translateX(-50%);
-			white-space: nowrap;
-			position: absolute;
-			bottom: -3px;
-			left: 50%;
+		@extend %big-height-size;
+		filter: opacity(0%);
+		transition: ease-in-out 0.56s;
+	}
+}
+//end-loading-screen
+
+//start-propagandas
+div.propagandas-container {
+	position: relative;
+
+	button {
+		&:first-of-type {
+			left: 0px
+		}
+
+		&:last-of-type {
+			right: 0px
+		}
+
+		width: 50%;
+		height: 100%;
+		position: absolute;
+		top: 0px;
+	}
+
+	& > div:first-of-type {
+		display: flex;
+		overflow: scroll;
+
+		img {
+			width: 100vw;
+			object-fit: cover;
 		}
 	}
 
-/*media*/
+	& > p {
+		border-radius: 4.9px;
+		color: var(--dark-gray);
+		background-color: var(--light-gray);
+		padding: 6.3px 10.5px;
+		font-size: 12.6px;
+		transform: translateX(-50%);
+		white-space: nowrap;
+		position: absolute;
+		bottom: -3px;
+		left: 50%;
+	}
+}
+//end-propagandas
+
+//@media
+@media (pointer:none), (pointer:coarse) {
+	div.loading-screen-container {
+		& > img {
+			transform: translateY(-200%)
+		}
+	}
+}
+
 @media (min-width: 700px) {
      main {
           padding: 84px 0px;
      }
 }
+
