--- a/src/front-end/home-page/styles/global/global.scss
+++ b/src/front-end/home-page/styles/global/global.scss
@@ -1,8 +1,11 @@
+//start-padding-size
 %default-padding-size {
      padding-right: 24.5px !important;
      padding-left: 24.5px !important;
 }
+//end-padding-size
 
+//start-height-size
 %default-height-size {
      height: 17.5px;
 }
@@ -10,10 +13,128 @@
 %big-height-size {
      height: 20.3px;
 }
+//end-height-size
+
+//start-font-size
+%small-font-size {
+     font-size: 11.2px;
+}
 
 %default-font-size {
      font-size: 17.5px;
 }
+
+%big-font-size {
+     font-size: 28px;
+}
+//end-font-size
+
+//start-product
+div.product-container {
+     z-index: 2;
+     display: flex;
+	flex-direction: column;
+	min-width: 280px;
+	max-width: 100%;
+     width: 100%;
+	border-radius: 14px;
+	user-select: none;
+	overflow: hidden;
+
+     & > div:first-of-type {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          gap: 28px;
+          background-color: white;
+          padding: 21px;
+
+          & > div:first-of-type {
+               width: 100%;
+               padding-bottom: 14px;
+
+               button {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    gap: 5.6px;
+                    width: fit-content;
+                    border-radius: 7px;
+                    font-size: 11.9px;
+                    padding: 6.3px 10.5px;
+                    font-family: var(--font-bold);
+                    background-color: var(--primary-color);
+                    color: white;
+
+                    i {
+                         color: white;
+                         font-size: 11.9px;
+                    }
+               }
+          }
+
+          img {
+               width: 210px;
+               height: 210px;
+               border-radius: 14px;
+               object-fit: contain;
+          }
+
+          & > div:last-of-type {
+               display: flex;
+               flex-direction: column;
+
+               p {
+                    text-align: center;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+               }
+
+               p.product-container__name {
+                    color: var(--regular-gray);
+                    font-size: 19.6px;
+                    font-family: var(--font-bold);
+                    padding: 0px 0px 5.6px 0px;
+               }
+
+               p.product-container__old-price {
+                    color: var(--regular-gray);
+                    text-decoration: line-through;
+                    font-size: 17.5px;
+                    filter: opacity(70%);
+               }
+
+               p.product-container__price {
+                    color: var(--regular-green);
+                    font-size: 28px;
+                    font-family: var(--font-bold);
+               }
+
+               p.product-container__installment {
+                    color: var(--regular-gray);
+                    font-size: 17.5px;
+               }
+          }
+     }
+
+     a {
+          display: flex;
+          gap: 5.6px;
+          align-items: center;
+          justify-content: center;
+          color: white;
+          padding: 17.5px 0px;
+          font-size: 17.5px;
+          font-family: var(--font-bold);
+          background-color: var(--regular-green);
+
+          i {
+               font-size: 21px;
+          }
+     }
+}
+//end-product
+
 
 //@media
 @media (min-width: 700px) {
@@ -32,6 +153,10 @@
 
      %default-font-size {
           font-size: 18.9px;
+     }
+
+     %big-font-size {
+          font-size: 31.5px;
      }
 }
 
