--- a/src/front-end/home-page/styles/header/header.css
+++ b/src/front-end/home-page/styles/header/header.css
@@ -11,6 +11,101 @@ header > div:last-of-type button, header > div:first-of-type > div:last-of-type 
   font-size: 17.5px;
 }
 
+div.product-container {
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  min-width: 280px;
+  max-width: 100%;
+  width: 100%;
+  border-radius: 14px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  overflow: hidden;
+}
+div.product-container > div:first-of-type {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 28px;
+  background-color: white;
+  padding: 21px;
+}
+div.product-container > div:first-of-type > div:first-of-type {
+  width: 100%;
+  padding-bottom: 14px;
+}
+div.product-container > div:first-of-type > div:first-of-type button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5.6px;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 7px;
+  font-size: 11.9px;
+  padding: 6.3px 10.5px;
+  font-family: var(--font-bold);
+  background-color: var(--primary-color);
+  color: white;
+}
+div.product-container > div:first-of-type > div:first-of-type button i {
+  color: white;
+  font-size: 11.9px;
+}
+div.product-container > div:first-of-type img {
+  width: 210px;
+  height: 210px;
+  border-radius: 14px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+div.product-container > div:first-of-type > div:last-of-type {
+  display: flex;
+  flex-direction: column;
+}
+div.product-container > div:first-of-type > div:last-of-type p {
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+div.product-container > div:first-of-type > div:last-of-type p.product-container__name {
+  color: var(--regular-gray);
+  font-size: 19.6px;
+  font-family: var(--font-bold);
+  padding: 0px 0px 5.6px 0px;
+}
+div.product-container > div:first-of-type > div:last-of-type p.product-container__old-price {
+  color: var(--regular-gray);
+  text-decoration: line-through;
+  font-size: 17.5px;
+  filter: opacity(70%);
+}
+div.product-container > div:first-of-type > div:last-of-type p.product-container__price {
+  color: var(--regular-green);
+  font-size: 28px;
+  font-family: var(--font-bold);
+}
+div.product-container > div:first-of-type > div:last-of-type p.product-container__installment {
+  color: var(--regular-gray);
+  font-size: 17.5px;
+}
+div.product-container a {
+  display: flex;
+  gap: 5.6px;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 17.5px 0px;
+  font-size: 17.5px;
+  font-family: var(--font-bold);
+  background-color: var(--regular-green);
+}
+div.product-container a i {
+  font-size: 21px;
+}
+
 @media (min-width: 700px) {
   header > div:last-of-type, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
     padding-right: 35px !important;
@@ -42,7 +137,7 @@ header > div:last-of-type button, header > div:first-of-type > div:last-of-type 
   }
 }
 header {
-  z-index: 2;
+  z-index: 3;
   width: 100%;
   position: fixed;
   top: 0px;
@@ -78,7 +173,7 @@ header > div:last-of-type {
   width: 100%;
   gap: 14px;
   background-color: var(--light-gray);
-  padding: 14px 0px;
+  padding: 10.5px 0px;
 }
 header > div:last-of-type button {
   color: var(--primary-color);
