--- a/src/front-end/home-page/styles/main/main.css
+++ b/src/front-end/home-page/styles/main/main.css
@@ -1,23 +1,146 @@
+div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+  padding-right: 24.5px !important;
+  padding-left: 24.5px !important;
+}
+
 div.loading-screen-container > img {
   height: 20.3px;
 }
 
+div.product-section-container > div > div:first-of-type h1 {
+  font-size: 28px;
+}
+
+div.product-container {
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  min-width: 280px;
+  max-width: 100%;
+  width: 100%;
+  border-radius: 14px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  overflow: hidden;
+}
+div.product-container > div:first-of-type {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 28px;
+  background-color: white;
+  padding: 21px;
+}
+div.product-container > div:first-of-type > div:first-of-type {
+  width: 100%;
+  padding-bottom: 14px;
+}
+div.product-container > div:first-of-type > div:first-of-type button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5.6px;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 7px;
+  font-size: 11.9px;
+  padding: 6.3px 10.5px;
+  font-family: var(--font-bold);
+  background-color: var(--primary-color);
+  color: white;
+}
+div.product-container > div:first-of-type > div:first-of-type button i {
+  color: white;
+  font-size: 11.9px;
+}
+div.product-container > div:first-of-type img {
+  width: 210px;
+  height: 210px;
+  border-radius: 14px;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+div.product-container > div:first-of-type > div:last-of-type {
+  display: flex;
+  flex-direction: column;
+}
+div.product-container > div:first-of-type > div:last-of-type p {
+  text-align: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+div.product-container > div:first-of-type > div:last-of-type p.product-container__name {
+  color: var(--regular-gray);
+  font-size: 19.6px;
+  font-family: var(--font-bold);
+  padding: 0px 0px 5.6px 0px;
+}
+div.product-container > div:first-of-type > div:last-of-type p.product-container__old-price {
+  color: var(--regular-gray);
+  text-decoration: line-through;
+  font-size: 17.5px;
+  filter: opacity(70%);
+}
+div.product-container > div:first-of-type > div:last-of-type p.product-container__price {
+  color: var(--regular-green);
+  font-size: 28px;
+  font-family: var(--font-bold);
+}
+div.product-container > div:first-of-type > div:last-of-type p.product-container__installment {
+  color: var(--regular-gray);
+  font-size: 17.5px;
+}
+div.product-container a {
+  display: flex;
+  gap: 5.6px;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  padding: 17.5px 0px;
+  font-size: 17.5px;
+  font-family: var(--font-bold);
+  background-color: var(--regular-green);
+}
+div.product-container a i {
+  font-size: 21px;
+}
+
 @media (min-width: 700px) {
+  div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+    padding-right: 35px !important;
+    padding-left: 35px !important;
+  }
   div.loading-screen-container > img {
     height: 21px;
   }
+  div.product-section-container > div > div:first-of-type h1 {
+    font-size: 31.5px;
+  }
 }
 @media (min-width: 1000px) {
+  div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+    padding-right: 84px !important;
+    padding-left: 84px !important;
+  }
   div.loading-screen-container > img {
     height: 21.7px;
   }
 }
+@media (min-width: 1200px) {
+  div.product-section-container > div > div:last-of-type, div.product-section-container > div > div:first-of-type {
+    padding-right: 140px !important;
+    padding-left: 140px !important;
+  }
+}
 main {
-  padding: 140px 0px;
+  padding: 126px 0px;
   background-color: var(--light-gray);
 }
 
 div.loading-screen-container {
+  filter: opacity(0%);
+  pointer-events: none;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -51,6 +174,9 @@ div.propagandas-container button {
   position: absolute;
   top: 0px;
 }
+div.propagandas-container button:focus {
+  outline: none;
+}
 div.propagandas-container button:first-of-type {
   left: 0px;
 }
@@ -79,6 +205,73 @@ div.propagandas-container > p {
   left: 50%;
 }
 
+div.product-section-container > div {
+  padding: 77px 0px;
+}
+div.product-section-container > div:nth-of-type(2) {
+  background-color: var(--primary-color);
+  position: relative;
+}
+div.product-section-container > div:nth-of-type(2)::before {
+  content: "";
+  width: 350px;
+  height: 350px;
+  border-radius: 100%;
+  border: 4.9px solid var(--primary-color);
+  transform: translateY(-50%);
+  position: absolute;
+  top: 0px;
+  left: -14px;
+}
+div.product-section-container > div:nth-of-type(2)::after {
+  content: "";
+  width: 350px;
+  height: 350px;
+  border-radius: 100%;
+  transform: translateY(-50%);
+  border: 4.9px solid var(--primary-color);
+  position: absolute;
+  right: -14px;
+  bottom: -49%;
+}
+div.product-section-container > div:nth-of-type(2) h1 {
+  color: white !important;
+}
+div.product-section-container > div:nth-of-type(2) h1::before {
+  background-color: white !important;
+}
+div.product-section-container > div > div:first-of-type {
+  width: 100vw;
+}
+div.product-section-container > div > div:first-of-type h1 {
+  z-index: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  color: var(--dark-gray);
+  padding: 7px 0px 7px 19.6px;
+  position: relative;
+}
+div.product-section-container > div > div:first-of-type h1::before {
+  content: "";
+  z-index: -1;
+  width: 10.5px;
+  height: 10.5px;
+  border-radius: 100%;
+  background-color: var(--primary-color);
+  transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  left: 0px;
+}
+div.product-section-container > div > div:last-of-type {
+  width: 100vw;
+  display: flex;
+  gap: 14px;
+  overflow: scroll;
+  padding: 14px 0px;
+}
+
 @media (pointer: none), (pointer: coarse) {
   div.loading-screen-container > img {
     transform: translateY(-200%);
@@ -87,5 +280,13 @@ div.propagandas-container > p {
 @media (min-width: 700px) {
   main {
     padding: 84px 0px;
+  }
+  div.product-section-container > div:nth-of-type(2)::before {
+    width: 420px;
+    height: 420px;
+  }
+  div.product-section-container > div:nth-of-type(2)::after {
+    width: 420px;
+    height: 420px;
   }
 }/*# sourceMappingURL=main.css.map */
