--- a/src/front-end/home-page/styles/main/main.scss
+++ b/src/front-end/home-page/styles/main/main.scss
@@ -1,7 +1,7 @@
 @import "../global/global";
 
 main {
-     padding: 140px 0px;
+     padding: 126px 0px;
 	background-color: var(--light-gray);
 }
 
@@ -11,6 +11,8 @@ div.loading-screen-container {
 		filter: opacity(0%);
 		pointer-events: none;
 	}
+	filter: opacity(0%);
+	pointer-events: none;
 
 	display: flex;
 	align-items: center;
@@ -42,6 +44,10 @@ div.propagandas-container {
 	position: relative;
 
 	button {
+		&:focus {
+			outline: none;
+		}
+
 		&:first-of-type {
 			left: 0px
 		}
@@ -81,6 +87,89 @@ div.propagandas-container {
 }
 //end-propagandas
 
+//start-products
+div.product-section-container {
+	& > div {
+		&:nth-of-type(2) {
+			&::before {
+				content: "";
+				width: 350px;
+				height: 350px;
+				border-radius: 100%;
+				border: 4.9px solid var(--primary-color);
+				transform: translateY(-50%);
+				position: absolute;
+				top: 0px;
+				left: -14px;
+			}
+
+			&::after {
+				content: "";
+				width: 350px;
+				height: 350px;
+				border-radius: 100%;
+				transform: translateY(-50%);
+				border: 4.9px solid var(--primary-color);
+				position: absolute;
+				right: -14px;
+				bottom: -49%;
+			}
+
+			background-color: var(--primary-color);
+			position: relative;
+			
+			h1 {
+				&::before {
+					background-color: white !important;
+				}
+
+				color: white !important;
+			}
+		}
+
+		padding: 77px 0px;
+
+		& > div:first-of-type {
+			@extend %default-padding-size;
+			width: 100vw;
+
+			h1 {
+				&::before {
+					content: "";
+					z-index: -1;
+					width: 10.5px;
+					height: 10.5px;
+					border-radius: 100%;
+					background-color: var(--primary-color);
+					transform: translateY(-50%);
+					position: absolute;
+					top: 50%;
+					left: 0px
+				}
+
+				@extend %big-font-size;
+				z-index: 1;
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+				color: var(--dark-gray);
+				padding: 7px 0px 7px 19.6px;
+				position: relative;
+			}
+		}
+
+		& > div:last-of-type {
+			@extend %default-padding-size;
+			width: 100vw;
+			display: flex;
+			gap: 14px;
+			overflow: scroll;
+			padding: 14px 0px;
+		}
+	}
+}
+//end-products
+
 //@media
 @media (pointer:none), (pointer:coarse) {
 	div.loading-screen-container {
@@ -94,5 +183,21 @@ div.propagandas-container {
      main {
           padding: 84px 0px;
      }
+
+	div.product-section-container {
+		& > div {
+			&:nth-of-type(2) {
+				&::before {
+					width: 420px;
+					height: 420px;
+				}
+
+				&::after {
+					width: 420px;
+					height: 420px;
+				}
+			}
+		}
+	}
 }
 
