--- a/src/front-end/home-page/styles/footer/footer.css
+++ b/src/front-end/home-page/styles/footer/footer.css
@@ -1,14 +1,10 @@
-header > div:last-of-type, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
+footer {
   padding-right: 24.5px !important;
   padding-left: 24.5px !important;
 }
 
-header > div:first-of-type img:first-of-type {
-  height: 17.5px;
-}
-
-header > div:last-of-type button, header > div:first-of-type > div:last-of-type button {
-  font-size: 17.5px;
+footer > div:last-of-type > div h1 {
+  font-size: 28px;
 }
 
 div.product-container {
@@ -107,102 +103,80 @@ div.product-container a i {
 }
 
 @media (min-width: 700px) {
-  header > div:last-of-type, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
+  footer {
     padding-right: 35px !important;
     padding-left: 35px !important;
   }
-  header > div:first-of-type img:first-of-type {
-    height: 18.9px;
-  }
-  header > div:last-of-type button, header > div:first-of-type > div:last-of-type button {
-    font-size: 18.9px;
+  footer > div:last-of-type > div h1 {
+    font-size: 31.5px;
   }
 }
 @media (min-width: 1000px) {
-  header > div:last-of-type, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
+  footer {
     padding-right: 84px !important;
     padding-left: 84px !important;
   }
-  header > div:first-of-type img:first-of-type {
-    height: 19.6px;
-  }
-  header > div:last-of-type button, header > div:first-of-type > div:last-of-type button {
-    font-size: 19.6px;
-  }
 }
 @media (min-width: 1200px) {
-  header > div:last-of-type, header > div:first-of-type > div:first-of-type, header > div:first-of-type {
+  footer {
     padding-right: 140px !important;
     padding-left: 140px !important;
   }
 }
-header {
-  z-index: 3;
+footer {
   width: 100%;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-}
-header > div:first-of-type {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  padding: 28px 0px;
+  padding: 119px 0px 28px 0px;
   background-color: var(--primary-color);
+  position: relative;
 }
-header > div:first-of-type img:first-of-type {
-  filter: grayscale(100%) brightness(200%);
+footer > div:first-of-type {
+  width: 100%;
+  height: 100px;
+  overflow: hidden;
+  transform: translateX(-50%);
+  position: absolute;
+  top: -51.8px;
+  left: 50%;
 }
-header > div:first-of-type > div:first-of-type {
-  display: none;
+footer > div:first-of-type svg path {
+  fill: var(--primary-color);
 }
-header > div:first-of-type > div:last-of-type {
+footer > div:last-of-type {
   display: flex;
-  gap: 21px;
+  justify-content: center;
 }
-header > div:first-of-type > div:last-of-type button {
+footer > div:last-of-type > div {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  gap: 7px;
+  width: 100%;
+  max-width: 385px;
+}
+footer > div:last-of-type > div h1 {
   color: white;
 }
-header > div:first-of-type > div:last-of-type > button:last-of-type {
-  display: none;
+footer > div:last-of-type > div p {
+  color: white;
+  padding: 0px 0px 21px 0px;
 }
-header > div:last-of-type {
+footer > div:last-of-type > div a {
   display: flex;
+  gap: 5.6px;
   align-items: center;
+  justify-content: center;
   width: 100%;
-  gap: 14px;
-  background-color: var(--light-gray);
-  padding: 10.5px 0px;
-}
-header > div:last-of-type button {
   color: var(--primary-color);
+  background-color: white;
+  padding: 16.8px 0px;
+  font-size: 15.4px;
+  font-family: var(--font-bold);
+  border-radius: 70px;
 }
-
-div.search-container {
-  width: 100%;
+footer > div:last-of-type > div a i {
+  font-size: 18.9px;
 }
-div.search-container input {
-  width: 100%;
-  border: 0px;
-  border-radius: 7px;
-  padding: 3.5px 10.5px;
-}
-div.search-container input:focus {
-  outline: none;
-}
-
-@media (min-width: 700px) {
-  header > div:first-of-type > div:first-of-type {
-    display: block;
-  }
-  header > div:first-of-type div:last-of-type > button:last-of-type {
-    display: block;
-  }
-  header > div:last-of-type {
-    display: none;
-  }
-  div.search-container input {
-    padding: 4.9px 10.5px;
-  }
-}/*# sourceMappingURL=header.css.map */
+footer > div:last-of-type > div > div:first-of-type {
+  display: flex;
+  gap: 7px;
+}/*# sourceMappingURL=footer.css.map */
